<resources>
    <string name="app_name" translatable="false">Multinet</string>
    <string name="logo" translatable="false">Logo</string>

    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <!--Landing Page Bottom Navigation Items-->
    <string name="landing_page_nav_menu_home">Home</string>
    <string name="landing_page_nav_menu_challenges">Challenges</string>
    <string name="landing_page_nav_menu_info">Info</string>
    <string name="landing_page_nav_menu_profile">Profiel</string>
    <!--Login-->
    <string name="login_title">Aanmelden</string>
    <string name="login_welcome">Welkom bij Multinet</string>
    <string name="login_username_required">Gebruikersnaam is verplicht</string>
    <string name="login_password_required">Wachtwoord is verplicht</string>
    <!--Home-->
    <string name="home_title">Home</string>
    <string name="home_next_reward_at">Volgende Beloning op niveau %1$d</string>
    <!--Profile-->
    <string name="logout">Uitloggen</string>
    <string name="profile_title">Profiel</string>
    <string name="profile_image_description">Profielfoto</string>
    <string name="profile_name">Naam</string>
    <string name="profile_familyname">Familienaam</string>
    <string name="profile_mail">Email</string>
    <string name="profile_number">Telefoon</string>
    <string name="profile_contract">Contractdatum</string>
    <string name="profile_company">Bedrijf</string>
    <string name="profile_user_info">Gegevens</string>
    <string name="profile_contact">Therapeuten</string>
    <string name="Update_profile_button">Aanpassen</string>
    <string name="profile_contract_date_format">%1d-%2d-%3d</string>
    <string name="profile_contract_date_invalid">Ongeldige Contract Datum</string>
    <string name="profile_contract_date_expired">Contract Is Verlopen</string>

    <!--Update Profile-->
    <string name="update_profile_title">Profiel aanpassen</string>
    <string name="update_profile_header_label">Gegevens Aanpassen</string>
    <string name="update_profile_firstname_required">Voornaam is verplicht</string>
    <string name="update_profile_firstname_minlength">Voornaam is minstens %1d karakters lang</string>
    <string name="update_profile_lastname_required">Familienaam is verplicht</string>
    <string name="update_profile_lastname_minlength">Familienaam is minstens %1d karakters lang</string>
    <string name="update_profile_phone_required">Telefoon is verplicht</string>
    <string name="update_profile_phone_minlength">Telefoon is minimum %1d cijfers lang</string>
    <string name="update_profile_phone_maxlength">Telefoon is maximum %1d cijfers lang</string>
    <string name="update_profile_email_required">Email is verplicht</string>
    <string name="update_profile_email_invalid">Ongeldige email</string>
    <string name="updateProfileError">Kon uw gegevens niet bewerken</string>


    <string name="confirm_updated_profile_button">Bevestig</string>
    <!--Challenges-->
    <string name="challenges_title">Challenges</string>
    <!--Info-->
    <string name="info_title">Info</string>

    <!--Network-->
    <string name="dialog_enable_wireless_title">Wifi inschakelen</string>
    <string name="dialog_enable_wireless_continue">Ga naar instellingen</string>
    <string name="dialog_cancel">Annuleren</string>
    <string name="dialog_enable_wireless_description">U hebt geen verbinding. Wifi aanzetten via instelligen?</string>
    <string name="dialog_ok">OK</string>
    <string name="offline">Offline</string>
    <string name="network_unavailable">Netwerk onbereikbaar</string>
    <string name="login_io_exception">Login mislukt, probeer later nog eens</string>

    <!--Retrofit Error-->
    <string name="generic_error">Er liep iets fout</string>
    <string name="login_invalid">Login ongeldig</string>
    <string name="complete_challenge">Uitdaging voltooien</string>
    <string name="userError">Kon uw details niet ophalen</string>
    <string name="therapistError">Kon uw therapeuten niet ophalen</string>
    <string name="challengeError">Kon uw uitdagingen niet ophalen</string>
    <string name="leaderboardError">Kon uw leaderboard niet ophalen</string>
    <string name="completeChallengeError">Kon de uitdaging niet voltooien</string>

    <!-- Complete Challenge -->
    <string name="complete_challenge_title">Wat vond je van de challenge?</string>
    <string name="complete_challenge_remarks">Opmerkingen</string>
    <string name="complete_challenge_offline_description">Kan de uitdaging niet voltooien. Er is geen verbinding.</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="leaderboard_place_text">Plaats</string>
    <string name="leaderboard_name_text">Naam</string>
    <string name="leaderboard_score_text">Score</string>
    <string name="ratingVeryBad">Heel Slecht</string>
    <string name="ratingBad">Heeft Verbertering Nodig</string>
    <string name="ratingGood">Goed</string>
    <string name="ratingVeryGood">Heel Goed</string>
    <string name="ratingPerfect">Perfect</string>
    <string name="complete_challenge_daily">Dagelijkse Uitdaging Voor %1s Al Voltooid</string>
</resources>
